added functionality to check ques solved by username
